[package]
name = "evaluator"
description = "Expression evaluator"
version = "0.1.0"

edition = "2021"
rust-version = "1.61.0"

homepage = "https://github.com/floating-floaties/eval-utility/"
keywords = ["expression", "evaluate", "evaluator", "expr", "template", "eval", "condition", "parse"]
repository = "https://github.com/floating-floaties/eval-utility/"
readme = "README.md"
license = "MIT"

[lib]
name = "eval"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
quick-error = "2.0.1"
