[package]
name = "resolver"
description = "Expression evaluator"
version = "0.1.3"

edition = "2024"

homepage = "https://github.com/floating-floaties/resolver/"
keywords = ["expression", "evaluator", "condition", "parse"]
repository = "https://github.com/floating-floaties/resolver/"
readme = "README.md"
license = "MIT"

[lib]
name = "resolver"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
quick-error = "2.0.1"
